# scirate.github.io

./: README.md
src/: index.html  scirate-site.cabal  site.hs
src/_site/: archive.html  atom.xml  index.html
src/_site/css/: default.css
src/_site/posts/: 2018-08-26-Welcome-To-The-Scirate-Blog.html  2018-10-06-How-You-Can-Contribute-To-SciRate.html
src/css/: default.css
src/posts/: 2018-08-26-Welcome-To-The-Scirate-Blog.md  2018-10-06-How-You-Can-Contribute-To-SciRate.md
src/templates/: default.html
